added reset button

--- a/src/components/ResultModule/ResultModule.module.scss
+++ b/src/components/ResultModule/ResultModule.module.scss
@@ -1,17 +1,20 @@
-.resultMessage {
-
-
+.resultPage {
       display: block;
       margin: auto;
-      padding: 200px;
       text-align: center;
       width: 100vw;
       height: 100vh;
       // outline: 1px solid red;
       font-size: 50px;
       background-color: #90ff90;
+}
+
+.resultMessage {
+      display: block;
+      margin: auto;
+      padding: 200px;
+      text-align: center;
+      // outline: 1px solid red;
+      font-size: 50px;
       color: #505050;
-
-
-
 }
