--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,9 @@
 @import './font-stylesheetGothamPro';
 
 @import './variables';
+@import './common';
 @import './global';
+@import './img';
 // @import './title';
 // @import './appbar';
 // @import './usermenu';
