--- a/src/components/StartModule/StartModule.module.scss
+++ b/src/components/StartModule/StartModule.module.scss
@@ -7,8 +7,8 @@
       background-size: cover;
       // background-size: contain;
       // box-sizing: content-box;
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: auto;
       background-color: rgba(47, 48, 58, 0.8);
       background-image:
             url("../../img/BGI.png");
@@ -17,7 +17,7 @@
 
 
 .startModule {
-      display: flex;
+      // display: flex;
       flex-direction: row;
 }
 
@@ -29,13 +29,12 @@
             display: block;
       }
 
-
       .mainTitile {
             display: block;
       }
 }
 
 
-@media screen and (min-width: $tablet) {}
-
-@media screen and (min-width: $tablet) {}
+// @media screen and (min-width: $tablet) {}
+// 
+// @media screen and (min-width: $tablet) {}
