added base animation

--- a/src/components/ResultModule/ResultModule.module.scss
+++ b/src/components/ResultModule/ResultModule.module.scss
@@ -14,7 +14,7 @@
 .resultMessage {
       display: block;
       margin: auto;
-      padding: 200px;
+      padding: 70px 0 30px;
       text-align: center;
       // outline: 1px solid red;
       font-size: 50px;
