--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,4 +12,4 @@
 // @import './usermenu';
 // @import './navigations';
 // @import './contacts';
-// @import './animation';        
+@import './animation';
