--- a/src/components/PCside/PCSide.module.scss
+++ b/src/components/PCside/PCSide.module.scss
@@ -7,7 +7,7 @@
       width: auto;
       // height: 100vh;
       // outline: 1px solid red;
-      font-size: 250px;
+      font-size: 200px;
       color: #707070;
 }
 
@@ -20,5 +20,5 @@
       text-align: center;
       color: black;
       font-size: 24px;
-      outline: 1px solid red;
+      // outline: 1px solid red;
 }
