--- a/src/components/Userside/Userside.module.scss
+++ b/src/components/Userside/Userside.module.scss
@@ -14,5 +14,5 @@
       text-align: center;
       color: black;
       font-size: 24px;
-      outline: 1px solid red;
+      // outline: 1px solid red;
 }
