--- a/src/components/ResultModule/ResultModule.module.scss
+++ b/src/components/ResultModule/ResultModule.module.scss
@@ -23,14 +23,22 @@
 
 
 .result {
-      display: flex;
-      flex-direction: row;
+      display: block;
+      margin: auto;
+      text-align: center;
 }
 
 @media screen and (min-width:$mobile) {
       .img {
             margin: 0 50px;
             // outline: 2px solid darkblue;
+      }
+
+      .result {
+            display: flex;
+            flex-direction: column;
+            flex-direction: row;
+            justify-content: space-around;
       }
 }
 
@@ -39,6 +47,10 @@
             margin: 0 50px;
       }
 
+      .result {
+            display: flex;
+            flex-direction: row;
+      }
 }
 
 @media screen and (min-width:$desktop) {
@@ -46,5 +58,8 @@
             margin: 0 50px;
       }
 
-
+      .result {
+            display: flex;
+            flex-direction: row;
+      }
 }
