--- a/src/components/StartModule/StartModule.module.scss
+++ b/src/components/StartModule/StartModule.module.scss
@@ -35,6 +35,7 @@
 }
 
 
-// @media screen and (min-width: $tablet) {}
+@media screen and (min-width: $tablet) {}
+
 // 
-// @media screen and (min-width: $tablet) {}
+@media screen and (min-width: $tablet) {}
