--- a/src/styles/_img.scss
+++ b/src/styles/_img.scss
@@ -8,9 +8,9 @@
 
 @media screen and (min-width:$mobile) {
       .img {
-            max-width: 480px;
-            // width: 480px;
-            height: 480px;
+            // max-width: 480px;
+            width: 25vw;
+            height: 20vh;
             margin-bottom: 15px;
 
       }
@@ -18,9 +18,9 @@
 
 @media screen and (min-width:$tablet) {
       .img {
-            max-width: 400px;
-            // width: 400px;
-            height: 400px;
+            // max-width: 400px;
+            width: 400px;
+            height: 300px;
             margin-bottom: 20px;
 
       }
@@ -28,8 +28,8 @@
 
 @media screen and (min-width:$desktop) {
       .img {
-            max-width: 600px;
-            // width: 600px;
+            // max-width: 600px;
+            width: 600px;
             height: 400px;
       }
 
